# rustfp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  codecov.yml  waf  wscript
cmake/: rustfp-config.cmake.in
include/rustfp/: all.h  any.h  cloned.h  collect.h  cycle.h  enumerate.h  filter.h  filter_map.h  find.h  find_map.h  flat_map.h  fold.h  for_each.h  iter.h  let.h  map.h  max.h  min.h  once.h  option.h  option_fwd.h  range.h  result.h  result_fwd.h  skip.h  specs.h  take.h  traits.h  unit.h  util.h  zip.h
src/: .travis.yml  mapbox  optional.hpp
src/rustfp/: all.h  any.h  cloned.h  collect.h  cycle.h  enumerate.h  filter.h  filter_map.h  find.h  find_map.h  flat_map.h  fold.h  for_each.h  iter.h  let.h  map.h  max.h  min.h  once.h  option.h  option_fwd.h  range.h  result.h  result_fwd.h  skip.h  take.h  traits.h  unit.h  util.h  zip.h
src/rustfp_unit_test/: unit_test.cpp
src/unit_test/: unit_test.cpp
